@@ -1,7 +1,7 @@
 ## Interface: 70000
 ## Title: Lib: IGAS
 ## Author: kurapica.igas@gmail.com
-## Version: v101
+## Version: v102
 ## Notes: In-game addon system
 ## URL: http://github.com/kurapica
 ## DefaultState: Enabled
