@@ -1,3 +1,6 @@
+2016/07/31: IGAS v102
+    1. Add TopToBottom, LeftoToRight property to IFSecurePanel.
+
 2016/07/31: IGAS v101
     1. Recode the whole unit system, to build a more clearly interface system for unit elements.
     2. Update for new PLoop System.
